--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="music-player">
         <h2>Favorite Songs</h2>
         <!-- Embed her favorite songs or playlist here -->
-        <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1&mute=1" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe>
         <!-- or use a SoundCloud or Spotify embed code -->
         <!-- <iframe width="100%" height="300" src="https://w.soundcloud.com/player/EMBED_CODE" frameborder="0" allowfullscreen></iframe> -->
         <!-- <iframe src="https://open.spotify.com/embed/ALBUM_ID" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
