--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Header with Birthday Theme -->
     <header>
-        <h1>🎉 Happy Birthday, Anu! 🎂</h1>
+        <h1>🎉 Happy Birthday, Anoouusshhkaaa! 🎂</h1>
         <img src="balloons-confetti_1048-6747.jpeg" alt="Ballons and Confetti">
     </header>
 
