--- a/index.html
+++ b/index.html
@@ -41,12 +41,17 @@
     <!-- Virtual Gift -->
     <section id="virtual-gift">
         <h2>🎁 Open Your Virtual Gift! 🎁</h2>
-        <div id="gift-box" onclick="revealMessage()">
+        <div id="gift-box" onclick="revealMessageAndVideo()">
             Click me!
         </div>
         <div id="hidden-message" style="display: none;">
             <p>Surprise! You mean the world to me, and I'm grateful to celebrate your special day with you. Happy Birthday!</p>
         </div>
+        <!-- Video element with autoplay -->
+        <video id="birthday-video" width="100%" height="300" style="display: none;" controls autoplay>
+            <source src="path_to_your_video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </section>
 
     <script src="script.js"></script>
