--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <!-- Video element with autoplay -->
         <video id="birthday-video" width="100%" height="300" style="display: none;" controls autoplay>
-            <source src="path_to_your_video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
