--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
 
     <script src="script.js"></script>
 
-    
+        <!-- Script for revealing the hidden message and video -->
+    <script>
+        function revealMessageAndVideo() {
+            // Show the hidden message
+            var hiddenMessage = document.getElementById("hidden-message");
+            hiddenMessage.style.display = "block";
+
+            // Show the video
+            var birthdayVideo = document.getElementById("birthday-video");
+            birthdayVideo.style.display = "block";
+        }
+    </script>
 
 </body>
 </html>
