--- a/index.html
+++ b/index.html
@@ -3,69 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday!</title>
+    <title>Happy Birthday Countdown!</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        #countdown {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        #birthday-content {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 
-    <!-- Header with Birthday Theme -->
-    <header>
-        <h1>🎉 Happy Birthday, Anoouusshhkaaa!!! 🎂</h1>
-        <img src="balloons-confetti_1048-6747.jpeg" alt="Ballons and Confetti">
-    </header>
+    <h1>🎉 Happy Birthday Countdown Page 🎂</h1>
 
-    
-    <!-- Music Player -->
-    <section id="music-player">
-        <h2>Our Favorite song</h2>
-        <h3>Please play the song</h3>
-        <!-- Embed her favorite songs or playlist here -->
-        <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe>
-        <!-- or use a SoundCloud or Spotify embed code -->
-        <!-- <iframe width="100%" height="300" src="https://w.soundcloud.com/player/EMBED_CODE" frameborder="0" allowfullscreen></iframe> -->
-        <!-- <iframe src="https://open.spotify.com/embed/ALBUM_ID" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
-    </section>
+    <div id="countdown"></div>
 
-    
-    <!-- Birthday Message -->
-    <section id="birthday-message">
-        <p>Dear future Doctor, past lover and my past, present and future love,</p>
-        <p>Celebrating another year of wonderful memories with you! 🎁</p>
-        <p>Remember that time we [insert inside joke or memory]? 😄</p>
-        <p>You are incredibly special to me, and here's why: [insert reasons].</p>
-        <p>Wishing you a day filled with joy, laughter, and all your heart's desires. 🥳</p>
-    </section>
+    <div id="birthday-content">
+        <!-- Header with Birthday Theme -->
+        <header>
+            <h1>🎉 Happy Birthday, Anoouusshhkaaa!!! 🎂</h1>
+            <img src="balloons-confetti_1048-6747.jpeg" alt="Balloons and Confetti">
+        </header>
 
+        <!-- Birthday Message -->
+        <section id="birthday-message">
+            <p>Dear future Doctor, past lover, and my past, present, and future love,</p>
+            <p>Celebrating another year of wonderful memories with you! 🎁</p>
+            <p>Remember that time we [insert inside joke or memory]? 😄</p>
+            <p>You are incredibly special to me, and here's why: [insert reasons].</p>
+            <p>Wishing you a day filled with joy, laughter, and all your heart's desires. 🥳</p>
+        </section>
 
+        <!-- Music Player -->
+        <section id="music-player">
+            <h2>Favorite Songs</h2>
+            <!-- Embed her favorite songs or playlist here -->
+            <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <!-- or use a SoundCloud or Spotify embed code -->
+            <!-- <iframe width="100%" height="300" src="https://w.soundcloud.com/player/EMBED_CODE" frameborder="0" allowfullscreen></iframe> -->
+            <!-- <iframe src="https://open.spotify.com/embed/ALBUM_ID" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
+        </section>
 
-    <!-- Virtual Gift -->
-    <section id="virtual-gift">
-        <h2>🎁 Open Your Virtual Gift! 🎁</h2>
-        <div id="gift-box" onclick="revealMessageAndVideo()">
-            Click me!
-        </div>
-        <div id="hidden-message" style="display: none;">
-            <p>Surprise! You mean the world to me, and I'm grateful to celebrate your special day with you. Happy Birthday!</p>
-        </div>
-        <!-- Video element with autoplay -->
-        <video id="birthday-video" width="100%" height="300" style="display: none;" controls autoplay>
-            <source src="video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </section>
+        <!-- Virtual Gift -->
+        <section id="virtual-gift">
+            <h2>🎁 Open Your Virtual Gift! 🎁</h2>
+            <div id="gift-box" onclick="revealMessageAndVideo()">
+                Click me!
+            </div>
+            <div id="hidden-message" style="display: none;">
+                <p>Surprise! You mean the world to me, and I'm grateful to celebrate your special day with you. Happy Birthday!</p>
+            </div>
+            <!-- Video element with autoplay -->
+            <video id="birthday-video" width="100%" height="300" style="display: none;" controls autoplay>
+                <source src="path_to_your_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
 
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 
         <!-- Script for revealing the hidden message and video -->
-    <script>
-        function revealMessageAndVideo() {
-            // Show the hidden message
-            var hiddenMessage = document.getElementById("hidden-message");
-            hiddenMessage.style.display = "block";
+        <script>
+            function revealMessageAndVideo() {
+                // Show the hidden message
+                var hiddenMessage = document.getElementById("hidden-message");
+                hiddenMessage.style.display = "block";
 
-            // Show the video
-            var birthdayVideo = document.getElementById("birthday-video");
-            birthdayVideo.style.display = "block";
+                // Show the video
+                var birthdayVideo = document.getElementById("birthday-video");
+                birthdayVideo.style.display = "block";
+            }
+        </script>
+
+    </div>
+
+    <script>
+        // Set the target date and time for the countdown (YYYY, MM (0-11), DD, HH, MM, SS)
+        var targetDate = new Date(2023, 11, 27, 00, 0, 0); // December 27, 2023, 00:00:00 AM
+
+        // Update the countdown every second
+        var countdownInterval = setInterval(updateCountdown, 1000);
+
+        function updateCountdown() {
+            var currentDate = new Date();
+            var timeDifference = targetDate - currentDate;
+
+            if (timeDifference > 0) {
+                var days = Math.floor(timeDifference / (1000 * 60 * 60 * 24));
+                var hours = Math.floor((timeDifference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes = Math.floor((timeDifference % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((timeDifference % (1000 * 60)) / 1000);
+
+                document.getElementById('countdown').innerHTML = 'Countdown: ' +
+                    days + 'd ' +
+                    hours + 'h ' +
+                    minutes + 'm ' +
+                    seconds + 's';
+            } else {
+                // Hide the countdown and show the birthday content
+                clearInterval(countdownInterval);
+                document.getElementById('countdown').style.display = 'none';
+                document.getElementById('birthday-content').style.display = 'block';
+            }
         }
     </script>
 
