--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Countdown!</title>
+    <title>Happy Birthday !!!</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
             margin: 20px;
+            background: src = "soon_birthday.gif" no-repeat center center fixed; 
+            background-size: cover;
         }
 
         #countdown {
@@ -24,7 +26,7 @@
 </head>
 <body>
 
-    <h1>🎉 Happy Birthday Countdown Page 🎂</h1>
+    <h1>🎉 Happy Birthday Countdown🎂</h1>
 
     <div id="countdown"></div>
 
@@ -65,7 +67,7 @@
             </div>
             <!-- Video element with autoplay -->
             <video id="birthday-video" width="100%" height="300" style="display: none;" controls autoplay>
-                <source src="path_to_your_video.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
