--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
             <img src="balloons-confetti_1048-6747.jpeg" alt="Balloons and Confetti">
         </header>
 
+        <!-- Music Player -->
+        <section id="music-player">
+            <h2>Our Favorite Song</h2>
+            <h3>Please start playing the song before scrolling further</h3>
+            <!-- Embed her favorite songs or playlist here -->
+            <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <!-- or use a SoundCloud or Spotify embed code -->
+            <!-- <iframe width="100%" height="300" src="https://w.soundcloud.com/player/EMBED_CODE" frameborder="0" allowfullscreen></iframe> -->
+            <!-- <iframe src="https://open.spotify.com/embed/ALBUM_ID" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
+        </section>
+
+
         <!-- Birthday Message -->
         <section id="birthday-message">
             <p>Dear future Doctor, past lover, and my past, present, and future love,</p>
@@ -46,15 +58,6 @@
             <p>Wishing you a day filled with joy, laughter, and all your heart's desires. 🥳</p>
         </section>
 
-        <!-- Music Player -->
-        <section id="music-player">
-            <h2>Favorite Songs</h2>
-            <!-- Embed her favorite songs or playlist here -->
-            <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe>
-            <!-- or use a SoundCloud or Spotify embed code -->
-            <!-- <iframe width="100%" height="300" src="https://w.soundcloud.com/player/EMBED_CODE" frameborder="0" allowfullscreen></iframe> -->
-            <!-- <iframe src="https://open.spotify.com/embed/ALBUM_ID" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
-        </section>
 
         <!-- Virtual Gift -->
         <section id="virtual-gift">
