--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: 'Arial', sans-serif;
             text-align: center;
             margin: 20px;
-            background: src = "soon_birthday.gif" no-repeat center center fixed; 
+            background: url(https://github.com/Amrit2608/birthday-website/blob/main/soon_birthday.gif) no-repeat center center fixed; 
             background-size: cover;
         }
 
