--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <script>
         // Set the target date and time for the countdown (YYYY, MM (0-11), DD, HH, MM, SS)
-        var targetDate = new Date(2023, 11, 15, 16, 12, 0); // December 27, 2023, 00:00:00 AM
+        var targetDate = new Date(2023, 11, 15, 16, 15, 0); // December 27, 2023, 00:00:00 AM
 
         // Update the countdown every second
         var countdownInterval = setInterval(updateCountdown, 1000);
@@ -119,6 +119,7 @@
                 clearInterval(countdownInterval);
                 document.getElementById('countdown').style.display = 'none';
                 document.getElementById('birthday-content').style.display = 'block';
+                document.getElementById('countdown-heading').style.display = 'none';
             }
         }
     </script>
