--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             text-align: center;
             margin: 20px;
             background: url(soon_birthday.gif) no-repeat center center fixed; 
-            background-size: cover;
+            background-size: contain;
         }
 
         #countdown {
@@ -94,7 +94,7 @@
 
     <script>
         // Set the target date and time for the countdown (YYYY, MM (0-11), DD, HH, MM, SS)
-        var targetDate = new Date(2023, 11, 15, 16, 25, 0); // December 27, 2023, 00:00:00 AM
+        var targetDate = new Date(2023, 11, 15, 16, 28, 0); // December 27, 2023, 00:00:00 AM
 
         // Update the countdown every second
         var countdownInterval = setInterval(updateCountdown, 1000);
