--- a/index.html
+++ b/index.html
@@ -3,30 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday !!!</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Happy Birthday!!!</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
             margin: 20px;
-            background: url(soon_birthday.gif) no-repeat center center fixed; 
+            /* Set background only during countdown */
+            background: url('soon_birthday.gif') no-repeat center center fixed;
             background-size: contain;
         }
 
-        #countdown {
+        #countdown-heading {
             font-size: 24px;
             margin-bottom: 20px;
+            color: #fff; /* Set text color to white for better visibility on the background */
         }
 
         #birthday-content {
             display: none;
+            color: #fff; /* Set text color to white for better visibility on the background */
         }
     </style>
 </head>
 <body>
 
-    <h1>🎉 Happy Birthday Countdown🎂</h1>
+    <h1 id="countdown-heading">🎉 Happy Birthday Countdown 🎂</h1>
 
     <div id="countdown"></div>
 
@@ -37,17 +39,17 @@
             <img src="balloons-confetti_1048-6747.jpeg" alt="Balloons and Confetti">
         </header>
 
+
         <!-- Music Player -->
         <section id="music-player">
             <h2>Our Favorite Song</h2>
-            <h3>Please start playing the song before scrolling further</h3>
+            <h3>Please play the song before scrolling down further</h3>
             <!-- Embed her favorite songs or playlist here -->
             <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe>
             <!-- or use a SoundCloud or Spotify embed code -->
             <!-- <iframe width="100%" height="300" src="https://w.soundcloud.com/player/EMBED_CODE" frameborder="0" allowfullscreen></iframe> -->
             <!-- <iframe src="https://open.spotify.com/embed/ALBUM_ID" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
         </section>
-
 
         <!-- Birthday Message -->
         <section id="birthday-message">
@@ -57,6 +59,7 @@
             <p>You are incredibly special to me, and here's why: [insert reasons].</p>
             <p>Wishing you a day filled with joy, laughter, and all your heart's desires. 🥳</p>
         </section>
+
 
 
         <!-- Virtual Gift -->
@@ -70,7 +73,7 @@
             </div>
             <!-- Video element with autoplay -->
             <video id="birthday-video" width="100%" height="300" style="display: none;" controls autoplay>
-                <source src="video.mp4" type="video/mp4">
+                <source src="path_to_your_video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
@@ -94,7 +97,7 @@
 
     <script>
         // Set the target date and time for the countdown (YYYY, MM (0-11), DD, HH, MM, SS)
-        var targetDate = new Date(2023, 11, 15, 16, 28, 0); // December 27, 2023, 00:00:00 AM
+        var targetDate = new Date(2023, 11, 15, 16, 38, 0); // December 27, 2023, 12:00:00 AM
 
         // Update the countdown every second
         var countdownInterval = setInterval(updateCountdown, 1000);
@@ -104,7 +107,9 @@
             var timeDifference = targetDate - currentDate;
 
             if (timeDifference > 0) {
+                // Show the background during the countdown
                 document.body.classList.add('show-background');
+
                 var days = Math.floor(timeDifference / (1000 * 60 * 60 * 24));
                 var hours = Math.floor((timeDifference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
                 var minutes = Math.floor((timeDifference % (1000 * 60 * 60)) / (1000 * 60));
@@ -119,8 +124,9 @@
                 // Hide the countdown and show the birthday content
                 clearInterval(countdownInterval);
                 document.getElementById('countdown').style.display = 'none';
+                document.getElementById('countdown-heading').style.display = 'none'; // Hide the countdown heading
                 document.getElementById('birthday-content').style.display = 'block';
-                document.getElementById('countdown-heading').style.display = 'none';
+                // Hide the background after countdown
                 document.body.classList.remove('show-background');
             }
         }
