--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!!!</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -97,7 +98,7 @@
 
     <script>
         // Set the target date and time for the countdown (YYYY, MM (0-11), DD, HH, MM, SS)
-        var targetDate = new Date(2023, 11, 15, 16, 44, 0); // December 27, 2023, 12:00:00 AM
+        var targetDate = new Date(2023, 11, 15, 16, 54, 0); // December 27, 2023, 12:00:00 AM
 
         // Update the countdown every second
         var countdownInterval = setInterval(updateCountdown, 1000);
