--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
             </video>
         </section>
 
+        <!-- Romantic mood --!>
+        <section id="mood">
+            <h2>Please pause the previous song in the embedded video and then start this song</h2>
+            <!-- Embed her favorite songs or playlist here -->
+            <!-- use a SoundCloud -->
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/al-amin-monshi/tumi_jantei_paronaa-e0-a6-a4&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false"></iframe>
+        </section>
+
         <script src="script.js"></script>
 
         <!-- Script for revealing the hidden message and video -->
