--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
             <h2>Our Favorite Song</h2>
             <h3>Please play the song before scrolling down further</h3>
             <!-- Embed her favorite songs or playlist here -->
-            <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe>
-            <!-- or use a SoundCloud or Spotify embed code -->
-            <!-- <iframe width="100%" height="300" src="https://w.soundcloud.com/player/EMBED_CODE" frameborder="0" allowfullscreen></iframe> -->
-            <!-- <iframe src="https://open.spotify.com/embed/ALBUM_ID" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
+<!--             <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe> -->
+            <!-- Spotify embed code -->
+            <iframe src="https://open.spotify.com/embed/track/1HNkqx9Ahdgi1Ixy2xkKkL" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" allow="autoplay"></iframe>
         </section>
 
         <!-- Birthday Message -->
