--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <!-- Embed her favorite songs or playlist here -->
 <!--             <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe> -->
             <!-- Spotify embed code -->
-            <iframe src="https://open.spotify.com/embed/track/1HNkqx9Ahdgi1Ixy2xkKkL" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" allow="autoplay"></iframe>
+<!--             <iframe src="https://open.spotify.com/embed/track/1HNkqx9Ahdgi1Ixy2xkKkL" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" allow="autoplay"></iframe> -->
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://open.spotify.com/embed/track/1HNkqx9Ahdgi1Ixy2xkKkL"></iframe>
         </section>
 
         <!-- Birthday Message -->
