--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
             <h2>Our Favorite Song</h2>
             <h3>Please play the song before scrolling down further</h3>
             <!-- Embed her favorite songs or playlist here -->
-<!--             <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe> -->
-            <!-- Spotify embed code -->
-<!--             <iframe src="https://open.spotify.com/embed/track/1HNkqx9Ahdgi1Ixy2xkKkL" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" allow="autoplay"></iframe> -->
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://open.spotify.com/embed/track/1HNkqx9Ahdgi1Ixy2xkKkL"></iframe>
+            <!-- sound cloud embed code -->
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/al-amin-monshi/tumi_jantei_paronaa-e0-a6-a4&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false"></iframe>
         </section>
 
         <!-- Birthday Message -->
@@ -50,22 +48,17 @@
             </div>
             <div id="hidden-message" style="display: none;">
                 <p>Surprise! You mean the world to me, and I'm grateful to celebrate your special day with you. Happy Birthday!</p>
+                <p>Please pause the previous song in the embedded video and then start this song</p>
+                <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://open.spotify.com/embed/track/1HNkqx9Ahdgi1Ixy2xkKkL"></iframe>
+        </section>
             </div>
             <!-- Video element with autoplay -->
             <video id="birthday-video" width="100%" height="300" style="display: none;" controls autoplay>
-                <source src="path_to_your_video.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
-
-        <!-- Romantic mood --!>
-        <section id="mood">
-            <h2>Please pause the previous song in the embedded video and then start this song</h2>
-            <!-- Embed her favorite songs or playlist here -->
-            <!-- use a SoundCloud -->
-<!--             <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/al-amin-monshi/tumi_jantei_paronaa-e0-a6-a4&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false"></iframe> -->
-        </section>
-
+            
         <script src="script.js"></script>
 
         <!-- Script for revealing the hidden message and video -->
