--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <h2>Our Favorite Song</h2>
             <h3>Please play the song before scrolling down further</h3>
             <!-- Embed her favorite songs or playlist here -->
-            <!-- sound cloud embed code -->
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/al-amin-monshi/tumi_jantei_paronaa-e0-a6-a4&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false"></iframe>
+            <!-- youtube embed code -->
+            <iframe width="100%" height="300" src="https://www.youtube.com/embed/f1QODR9wUno?autoplay=1" frameborder="0" allowfullscreen></iframe>
         </section>
 
         <!-- Birthday Message -->
@@ -43,12 +43,12 @@
         <!-- Virtual Gift -->
         <section id="virtual-gift">
             <h2>🎁 Open Your Virtual Gift! 🎁</h2>
+            <h4>Please pause the previous song in the embedded video and then click the button below</h4>
             <div id="gift-box" onclick="revealMessageAndVideo()">
                 Click me!
             </div>
             <div id="hidden-message" style="display: none;">
                 <p>Surprise! You mean the world to me, and I'm grateful to celebrate your special day with you. Happy Birthday!</p>
-                <p>Please pause the previous song in the embedded video and then start this song</p>
                 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://open.spotify.com/embed/track/1HNkqx9Ahdgi1Ixy2xkKkL"></iframe>
         </section>
             </div>
