--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!!!</title>
+    <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -72,8 +73,11 @@
                 var soundcloudPlayer = document.getElementById("soundcloud-player");
                 soundcloudPlayer.style.display = "block";
 
-                // Play the SoundCloud song
-                soundcloudPlayer.contentWindow.postMessage('{"event":"command","func":"' + 'play' + '","args":""}', '*');
+                // Use the SoundCloud Widget API to play the song
+                var widget = SC.Widget(soundcloudPlayer);
+                widget.play();
+                              
+
 
                 // Show the video
                 var birthdayVideo = document.getElementById("birthday-video");
