--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
         <!-- Birthday Message -->
         <section id="birthday-message">
             <p>Dear future Doctor, past lover, and my past, present, and future love,</p>
-            <p>Celebrating another year of wonderful memories with you! 🎁</p>
-            <p>Remember that time we [insert inside joke or memory]? 😄</p>
-            <p>You are incredibly special to me, and here's why: [insert reasons].</p>
-            <p>Wishing you a day filled with joy, laughter, and all your heart's desires. 🥳</p>
+            <p>Celebrating another year of wonderful memories (both good and bad😄) with you! 🎁</p>
+            <p>Remember that if it is not night we cannot see the stars (a dialogue that I keep on saying to you all the time)? 😄</p>
+            <p>You are incredibly special to me, and here's why: </p>
+            <p>You are crazy as fuck! (I am also a bit crazy I think, so we go along well) </p>
+            <p>You are obsessed with fighting and cannot stay a day without fighting with me (I like the fighting spirit) </p>
+            <p>You are strong and muscular so I do not have to suppress my strength when fighting physically with you!</p>
+            <p>You are very independent but get sad when you need help sometimes(It is natural!!! Humans need other humans in life!) </p>
+            <p>I can go on with reasons for you to be special. So let's stop! </p>
+            <p>I Wish you a day filled with joy, laughter, and all your heart's desires. 🥳</p>
+            <p>Not just for one day, for your entire life!!!!</p>
         </section>
 
 
