--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
             <p>You are strong and muscular so I do not have to suppress my strength when fighting physically with you!</p>
             <p>You are very independent but get sad when you need help sometimes(It is natural!!! Humans need other humans in life!) </p>
             <p>Six years of putting up with my quirks and still counting! You have the patience of more than a saint. Either way, I'm grateful!</p> 
-            <p>Six years of navigating life's obstacle course together! From minor speed bumps to major plot twists, we've proven that no challenge is too great for us to conquer and our friendship remains the same.</p>
+            <p>Six years of navigating life's obstacle course together! From minor speed bumps to major plot twists, we've proven that no challenge is too great for us to conquer and for our friendship to break.</p>
             <p>I can go on with reasons for you to be special. So let's stop! </p>
-            <p>Six years of putting up with my quirks and still counting! You have the patience of more than a saint. Either way, I'm grateful!</p>
             <p>I Wish you a day filled with joy, laughter, and all your heart's desires. 🥳</p>
             <p>Not just for one day, for your entire life!!!!</p>
         </section>
@@ -58,7 +57,8 @@
                 Click me!
             </div>
             <div id="hidden-message" style="display: none;">
-                <p>Surprise! I'm grateful to celebrate your special day with you virtually even though I am physically not present there. Happy Birthday!</p>
+                <p>Surprise!<\p>
+                <p>I'm grateful to celebrate your special day with you virtually even though I am physically not present there. Happy Birthday!</p>
                 <iframe id="soundcloud-player" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/al-amin-monshi/tumi_jantei_paronaa-e0-a6-a4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false" style="display: none;"></iframe>
         </section>
             </div>
