--- a/index.html
+++ b/index.html
@@ -57,16 +57,19 @@
                 Click me!
             </div>
             <div id="hidden-message" style="display: none;">
-                <p>Surprise!<\p>
                 <p>I'm grateful to celebrate your special day with you virtually even though I am physically not present there. Happy Birthday!</p>
                 <iframe id="soundcloud-player" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/al-amin-monshi/tumi_jantei_paronaa-e0-a6-a4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false" style="display: none;"></iframe>
         </section>
             </div>
             <!-- Video element with autoplay -->
-            <video id="birthday-video" width="100%" height="300" style="display: none;" controls autoplay>
+            <video id="birthday-video" width="100%" height="600" style="display: none;" controls autoplay>
                 <source src="video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <h3> 
+                <p>Hopefully you enjoyed the video with the song!</p>
+                <p>Once again a very happy birthday to you! Stay well and stay happy!</p>
+            </h3>
         </section>
             
         <script src="script.js"></script>
