--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <video id="birthday-video" width="100%" height="800" style="display: none;" controls autoplay>
                 <source src="video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
-                <h3> 
+                
                 <p>Hopefully you enjoyed the video with the song!</p>
-                <p>Once again a very happy birthday to you! Stay well and stay happy!</p>
-                </h3>
+                <p>Once again a very happy birthday to you! Stay well and stay happy!!!</p>
+                
             </video>
 
         </section>
