--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </video>
             <h3>
             <p>Hopefully you enjoyed it!</p>
-            <p>Once again a very happy birthday to you! Stay well and stay happy!!!</p>
+            <p>Once again a very happy birthday to you! Stay well and stay happy!</p>
             </h3>
             </div>
         </section>
